kubernetes_manifests/istio_config.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ruby_gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "ruby.app"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-app-virtualservice
spec:
  hosts:
  - "ruby.app"
  gateways:
  - ruby_gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: ruby_svc
        port:
          number: 80
